[package]
name = "subspace-core-rust"
version = "0.1.0"
authors = ["jwagstaff"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.2"
dirs = "3.0.1"
indicatif = "0.15.0"
futures = "0.3.5"
rand = "0.7.3"
rayon = "1.3.0"
ring = "0.16.9"

[dependencies.async-std]
version = "1.6.2"
features = ["attributes"]

[dependencies.rug]
version = "1.9.0"
default-features = false
features = ["integer", "rand"]

[[bench]]
name = "sloth"
harness = false
