[package]
name = "subspace-core-rust"
version = "0.1.0"
authors = ["jwagstaff", "nazar-pc"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
bitintr = "0.3.0"
bytes = "0.5.6"
criterion = "0.3.2"
dirs = "3.0.1"
ed25519-dalek = "=1.0.0-pre.3"
indicatif = "0.15.0"
futures = "0.3.5"
hex = "0.4.0"
merkle-tree-binary = { git = "https://github.com/subspace/merkle-tree-binary.rs" }
num-bigint = "0.2.3"
num-traits = "0.2.10"
rand = "0.7.3"
rand_core = "0.5.1"
rayon = "1.3.0"
ring = "0.16.9"
serde = { version = "1.0.104", features = ["derive"] }

[dependencies.async-std]
version = "1.6.2"
features = ["attributes", "unstable"]

[dependencies.rug]
version = "1.9.0"
default-features = false
features = ["integer", "rand"]

[[bench]]
name = "sloth"
harness = false
